[package]
name = "aws-lc-sys"
description = "AWS-LC is a general-purpose cryptographic library maintained by the AWS Cryptography team for AWS and their customers. It іs based on code from the Google BoringSSL project and the OpenSSL project."
version = "__AWS_LC_SYS_VERSION__"
authors = ["AWS-LC"]
edition = "2021"
repository = "https://github.com/aws/aws-lc"
license = "Apache-2.0 OR ISC"
rust-version = "1.57.0"
include = [
    "build/**/*.rs",
    "Cargo.toml",
    "deps/aws-lc/**/*.c",
    "deps/aws-lc/**/*.cc",
    "deps/aws-lc/**/*.pl",
    "deps/aws-lc/**/*.h",
    "deps/aws-lc/**/*.S",
    "deps/aws-lc/**/CMakeLists.txt",
    "deps/aws-lc/**/*.cmake",
    "deps/aws-lc/**/*.errordata",
    "deps/aws-lc/**/*.go",
    "src/**/*.rs",
    "tests/**/*.rs",
]
build = "build/main.rs"

[features]
asan = []
generate_bindings = ["bindgen"] # Generate the bindings on the targetted platform as a fallback mechanism.
internal_generate = ["bindgen"] # Only for internal use, this line is removed prior to publishing.
ssl = []

[build-dependencies]
cmake = "0.1.48"
bindgen = { version = "0.64.0", optional = true }
regex = "1"
dunce = "1.0"
cfg_aliases = "0.1.1"

[dependencies]
libc = "0.2"
paste = "1.0.11"

[dev-dependencies]
openssl = { version = "0.10" }

[package.metadata.aws-lc-sys]
commit-hash = "__AWS_LC_COMMIT_HASH__"
